trying to setup unit tests with amd modules. not currently working

--- a/index.html.ejs
+++ b/index.html.ejs
@@ -16,7 +16,12 @@
     <script src="js/lib/requirejs/require.js" data-main="js/main.js"></script>
     <% } %>
 
-
+    <style type="text/css">
+        body {
+            font-family: "segoe ui", "Arial", "Helvetica", "sans-serif";
+            font-size: 12pt;
+        }
+    </style>
 </head>
 <body>
     <div data-ng-controller="layoutCtrl">
