Added directive and templates

--- a/index.html.ejs
+++ b/index.html.ejs
@@ -27,5 +27,7 @@
     <div data-ng-controller="layoutCtrl">
         <h1>{{title}}</h1>
     </div>
+    <hr>
+    <div data-current-time></div>
 </body>
 </html>
